# apsproject

./: README.md
APSproject/: CMakeLists.txt  README.md  sample.txt  test.txt
APSproject/docs/: technical_documentation.md
APSproject/include/: Document.hpp  HuffmanCompression.hpp  InvertedIndex.hpp  SearchEngine.hpp  SpellCorrector.hpp  TFIDFCalculator.hpp  Trie.hpp
APSproject/src/: Document.cpp  HuffmanCompression.cpp  InvertedIndex.cpp  SearchEngine.cpp  SpellCorrector.cpp  TFIDFCalculator.cpp  Trie.cpp  main.cpp
APSproject/test/: sample.txt  search_engine_test.cpp
